First implementation of prettified Teams